Use spring-pulsar snapshot

--- a/README.adoc
+++ b/README.adoc
@@ -30,83 +30,58 @@ docker run --name pulsar-standalone -d -p 8080:8080 -p 6650:6650 apachepulsar/pu
 ./gradlew :webhook-target-app:bootRun
 ----
 
-== Telemetry ingest demonstration
+== Sensor ingest demonstration
 
-=== Sending 1M telemetry entries with curl, all in one request
+NOTE: This requires gnu `shuf` (on MacOS: `brew install coreutils`, use `gshuf` instead of `shuf`).
+
+=== Sending 1M sensor entries with curl, all in one request
 
 [source,bash]
 ----
-{ for i in {1..1000000}; do echo '{"n": "device'$i'/sensor1", "v": '$i'.123}'; done; } \
-    | curl -X POST -T - -H "Content-Type: application/x-ndjson" localhost:8081/telemetry
+for i in {1..1000000}; do
+  echo '{"name": "Sensor-'$i'", "value": '$(shuf -i 20-49 -n 1)'}' \
+    | curl -X POST -T - -H "Content-Type: application/x-ndjson" localhost:8081/sensors
+done
 ----
 
-=== Sending 1M telemetry entries with curl, 1 message per request, with up to 50 parallel requests
+=== Sending 1M sensor entries with curl, 1 message per request, with up to 50 parallel requests
 
-Note: this requires gnu xargs (on MacOS: `brew install findutils`, use `gxargs` instead of `xargs`)
+NOTE: This requires gnu `xargs` (on MacOS: `brew install findutils`, use `gxargs` instead of `xargs`)
 and gnu parallel (`brew install parallel`/`apt install moreutils`).
 
 [source,bash]
 ----
-{ for i in {1..1000000}; do echo -ne 'curl -s -X POST -d '\''{"n": "device'$i'/sensor1", "v": '$i'.123}'\'' -H "Content-Type: application/x-ndjson" localhost:8081/telemetry''\0'; done; } \
+{ for i in {1..1000000}; do
+  echo -ne 'curl -s -X POST -d '\''{"name": "Sensor-'$i'", "value": '$(shuf -i 20-49 -n 1)'}\'' -H "Content-Type: application/x-ndjson" localhost:8081/sensors''\0'; done; } \
   | xargs -0 -P 2 -n 100 parallel -j 25 --
 ----
 
-=== Sending 10000 telemetry entries with curl, 1 message per request (slow!)
+=== Sending 10000 sensor entries with curl, 1 message per request (slow!)
 
 [source,bash]
 ----
 for i in {1..10000}; do
-  echo '{"n": "device'$i'/sensor1", "v": '$i'.123}' \
-    | curl -X POST -T - -H "Content-Type: application/x-ndjson" localhost:8081/telemetry
+  echo '{"name": "Sensor-'$i'", "value": '$(shuf -i 20-49 -n 1)'}' \
+    | curl -X POST -T - -H "Content-Type: application/x-ndjson" localhost:8081/sensors
 done
 ----
 
-=== Sending 1M telemetry entries with k6
+=== Sending 1M sensor entries (1000 devices, 1000 metrics) with curl, all in one request
+
+[source,bash]
+----
+{ for i in {1..1000}; do for j in {1..1000}; do
+  echo '{"name": "Sensor-'$i'", "value": '$(shuf -i 20-49 -n 1)'}'; done; done; } \
+    | curl -X POST -T - -H "Content-Type: application/x-ndjson" localhost:8081/sensors
+----
+
+=== Sending 1M sensor entries with k6
 
 Requires https://k6.io/docs/getting-started/installation/[installing k6].
 
 [source,bash]
 ----
 cd k6
-k6 run -u 100 -i 1000000 telemetry_ingest.js
+k6 run -u 100 -i 1000000 sensors_ingest.js
 ----
-
-== Telemetry processing demonstration
-
-=== Start pulsar-client to consume from telemetry_median
-
-----
-pulsar-client consume -n 0 -s sub telemetry_median
-----
-
-=== Sending 1M telemetry entries (1000 devices, 1000 metrics) with curl, all in one request
-
-[source,bash]
-----
-{ for i in {1..1000}; do for j in {1..1000}; do echo '{"n": "device'$i'/sensor1", "v": '$j'.123}'; done; done; } \
-    | curl -X POST -T - -H "Content-Type: application/x-ndjson" localhost:8081/telemetry
-----
-
-== SSE / Server Sent Events demonstration
-
-SSE/Server Servet Events uses `text/event-stream` which is https://html.spec.whatwg.org/#parsing-an-event-stream[defined in the HTML standard].
-
-curl with `-N` parameter can be used to demonstrate SSE.
-The backend support passing last event id in `Last-Event-ID` header or `lastEventId` query parameter. In addition, there is
-a poll parameter which takes a boolean value expressed with true/1/yes/false/0/no.
-The `/firehost` path uses the `telemetry_ingest` topic as the source and `/firehost/median` uses `telemetry_median`. 
-
-[source,bash]
-----
-# use telemetry_ingest topic
-curl -N localhost:8081/firehose/ingest
-# use telemetry_median topic
-curl -N localhost:8081/firehose/median
-----
-
-continuing after a specific message id: 
-
-[source,bash]
-----
-curl -N 'localhost:8081/firehose/median?lastEventId=CLoYEOEHIAAwAQ==&poll=0'
-----
+Z
